--- a/css/styles.css
+++ b/css/styles.css
@@ -69,13 +69,14 @@
   }
 
   .content {
-    padding: 10px 5%;
+    padding: 0;
     width: 100%;
   }
 
   .main-content-wrapper {
-    height: 100%;
+    height: calc(100vh - 40px);
     position: relative;
+    padding-top: 0;
   }
 
   /* ==========================================================================
@@ -133,9 +134,8 @@
     border-left: 1px solid #ddd;
     display: flex;
     flex-direction: column;
-    height: calc(100vh - 40px);
+    height: 100%;
     transition: none;
-    margin: 0;
   }
 
   .details-content {
@@ -433,7 +433,7 @@
     }
 
     .main-content-wrapper {
-      padding-top: 40px; /* Account for navigation bar */
+      padding-top: 0;
     }
   }
 
